# ChunkyLogs

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: macros.rs  main.rs
src/cache/: cache.rs  entry.rs  mod.rs
src/chunk/: chunk.rs
src/compiler/: byte_unpack.rs  mod.rs  proc_macros.rs  reify.rs
src/compiler/errors/: mod.rs  proc_macro_errors.rs
src/compression/: compressor.rs  handler.rs  mod.rs
src/compression/exception/: compressor_exceptions.rs  mod.rs
src/configuration/: config.rs  exceptions.rs  mod.rs
src/data/: mod.rs
src/data/abstraction/: log_entry.rs  log_group.rs  log_store.rs  mod.rs
src/data/bytes/: mod.rs  reader_utils.rs
src/data/bytes/exceptions/: mod.rs  reader_utils_exceptions.rs
src/data/chunk/: chunk.rs  mod.rs
src/data/chunk/exceptions/: chunk_exceptions.rs  mod.rs
src/data/group/: log_entry.rs  log_group.rs  mod.rs
src/data/group/exceptions/: group_exceptions.rs  mod.rs
src/data/representational/: chunk.rs  chunk_entry.rs  mod.rs
src/data/representational/store/: chunk_offsets.rs  chunk_store.rs  chunk_store_header.rs  mod.rs
src/data/store/: log_store.rs  mod.rs
src/data/store/exceptions/: mod.rs  store_exceptions.rs
src/encoding/: decoder.rs  encoder.rs  mod.rs  transcoder.rs
src/encoding/errors/: encoding_errors.rs  mod.rs
src/encoding/exceptions/: encoding_exceptions.rs  mod.rs
src/group/: log_entry.rs  log_group.rs
src/logging/: logging.rs
src/utils/: datetime_utils.rs  mod.rs
