[package]
name = "chunky_logs"
version = "0.1.0"
authors = ["Jack Kilrain (EngineersBox)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java-properties = "1.3.0"
ipnet = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono ="0.4.19"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
regex = "1.4.3"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
memmap = "0.7.0"
nom = "7.1.1"